fix: remove dead code and update swagger
